<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/buzhou"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buzhou1"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buzhou2"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buzhou3"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buzhou4"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buzhou5"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>
</ScrollView>